--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ elseif(isset($errorMsg)){
 <!--Footer-->
 
 <footer>
-    <p>@ CopyRight, Tous droits réservés &#169; Ralisé par Regis F.M. ATTOLOU</p>
+    <p>@ CopyRight, Tous droits réservés &#169; Ralisé par <a href="mailto:regisattolou21@outlook.fr">Regis F.M. ATTOLOU</a></p>
 </footer>
 </body>
 </html>
