--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ if(isset($_POST['valider'])){
     <section id="sectionTxtImg" class="txtImg">
         <div class="flexContainerSection1">
             <div class="contImgSec1">
-                <img src="Ressources/1.jpg" alt="Image de ville">
+                <img src="Ressources/about.jpg" alt="Image de ville">
             </div>
             <div class="contTxtSec1">
                 <h2>Le Secret Méconnu du Succès</h2>
@@ -97,31 +97,31 @@ if(isset($_POST['valider'])){
     <section class="portFolioImg">
         <div class="flexImgPortflolio">
             <div class="ImgPort">
-                <img src="Ressources/A.jpg" alt="Image simple A">
+                <img src="Ressources/girl.jpg" alt="Image simple A">
             </div>
             <div class="ImgPort">
-                <img src="Ressources/B.jpg" alt="Image simple B">
+                <img src="Ressources/guitare.jpg" alt="Image simple B">
             </div>
             <div class="ImgPort">
-                <img src="Ressources/C.jpg" alt="Image simple C">
+                <img src="Ressources/interieur.jpg" alt="Image simple C">
             </div>
             <div class="ImgPort">
-                <img src="Ressources/D.jpg" alt="Image simple D">
+                <img src="Ressources/look.jpg" alt="Image simple D">
             </div>
             <div class="ImgPort">
-                <img src="Ressources/E.jpg" alt="Image simple E">
+                <img src="Ressources/love.jpg" alt="Image simple E">
             </div>
             <div class="ImgPort">
-                <img src="Ressources/F.jpg" alt="Image simple F">
+                <img src="Ressources/oeil.jpg" alt="Image simple F">
             </div>
             <div class="ImgPort">
-                <img src="Ressources/G.jpg" alt="Image simple G">
+                <img src="Ressources/verre.jpg" alt="Image simple G">
             </div>
             <div class="ImgPort">
-                <img src="Ressources/H.jpg" alt="Image simple H">
+                <img src="Ressources/ville.jpg" alt="Image simple H">
             </div>
             <div class="ImgPort">
-                <img src="Ressources/I.jpg" alt="Image simple I">
+                <img src="Ressources/papillon.jpg" alt="Image simple I">
             </div>
         </div>
     </section>
@@ -167,7 +167,7 @@ elseif(isset($errorMsg)){
 <!--Footer-->
 
 <footer>
-    <p>@ CopyRight, Tous droits réservés &#169; Ralisé par <a href="mailto:regisattolou21@outlook.fr">Regis F.M. ATTOLOU</a></p>
+    <p> &copy; CopyRight, Tous droits réservés. Ralisé par <a href="mailto:regisattolou21@outlook.fr">@ Regis F.M. ATTOLOU</a></p>
 </footer>
 </body>
 </html>
