--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@ if(isset($_POST['valider'])){
         <div class="flexContainerSection1">
             <div class="contImgSec1">
                 <img src="Ressources/about.jpg" alt="Image de ville">
+                <div class="overlay">
+                    <div class="text">VILLE AU CREPUSCULE</div>
+                  </div>
             </div>
             <div class="contTxtSec1">
                 <h2>Le Secret Méconnu du Succès</h2>
@@ -98,30 +101,57 @@ if(isset($_POST['valider'])){
         <div class="flexImgPortflolio">
             <div class="ImgPort">
                 <img src="Ressources/girl.jpg" alt="Image simple A">
+                <div class="overlay">
+                    <div class="text">GIRL BACK PICTURE</div>
+                  </div>
             </div>
             <div class="ImgPort">
                 <img src="Ressources/guitare.jpg" alt="Image simple B">
+                <div class="overlay">
+                    <div class="text">GIRL AND GUITARE</div>
+                  </div>
             </div>
             <div class="ImgPort">
                 <img src="Ressources/interieur.jpg" alt="Image simple C">
+                <div class="overlay">
+                    <div class="text">INTERIOR OF CAR</div>
+                  </div>
             </div>
             <div class="ImgPort">
                 <img src="Ressources/look.jpg" alt="Image simple D">
+                <div class="overlay">
+                    <div class="text">A LOOK OF GRIL</div>
+                  </div>
             </div>
             <div class="ImgPort">
                 <img src="Ressources/love.jpg" alt="Image simple E">
+                <div class="overlay">
+                    <div class="text">HEART PICTURE</div>
+                  </div>
             </div>
             <div class="ImgPort">
                 <img src="Ressources/oeil.jpg" alt="Image simple F">
+                <div class="overlay">
+                    <div class="text">EYES OF SOMEBODY</div>
+                  </div>
             </div>
             <div class="ImgPort">
                 <img src="Ressources/verre.jpg" alt="Image simple G">
+                <div class="overlay">
+                    <div class="text">MURG WITH DRINK</div>
+                  </div>
             </div>
             <div class="ImgPort">
                 <img src="Ressources/ville.jpg" alt="Image simple H">
+                <div class="overlay">
+                    <div class="text">THE CITY</div>
+                  </div>
             </div>
             <div class="ImgPort">
                 <img src="Ressources/papillon.jpg" alt="Image simple I">
+                <div class="overlay">
+                    <div class="text">A </div>
+                  </div>
             </div>
         </div>
     </section>
