--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@ elseif(isset($errorMsg)){
             <textarea id="msg" placeholder="Message" name="message" require></textarea>
         </div>
         <div class="row">
-            <input type="submit" class="subBtn" value="Envoyer" name="valider">
+            <input type="submit" class="subBtn button" value="Envoyer" name="valider">
         </div>
     </form>
 </section>
 <!--Footer-->
 
 <footer>
-    <p> &copy; CopyRight, Tous droits réservés. Ralisé par <a href="mailto:regisattolou21@outlook.fr">@ Regis F.M. ATTOLOU</a></p>
+    <p class="footer"> &copy; CopyRight, Tous droits réservés. Ralisé par <a href="mailto:regisattolou21@outlook.fr">@ Regis F.M. ATTOLOU</a></p>
 </footer>
 </body>
 </html>
