--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ if(isset($_POST['valider'])){
 
     <div class="accueil">
         <h1>Découvrez mes créations</h1>
-        <p class="sousTitreP">Dreams are not what you see in your sleep, Dreams are things which do not let you sleep !</p>
+        <p class="sousTitreP">Dreams are not what you see in your sleep, <br> Dreams are things which do not let you sleep ! <br> It's all about money.</p>
         <div class="button">
             <a href="mailto:regisattolou21@outlook.fr">CONTACTER</a>
         </div>
