--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@ if(isset($_POST['valider'])){
 </head>
 <body>
     <!--Accueil et navbar-->
-    <div class="navbar">
-        <div class="contItems">
-            <a href="#" class="items">Accueil</a>
-            <a href="#sectionTxtImg" class="items">A propos</a>
-            <a href="#creations" class="items">Créations</a>
-            <a href="#contact" class="items">Contact</a>
+    <section class="wrapper">
+        <div class="navbar">
+            <div class="contItems">
+                <a href="#" class="items">Accueil</a>
+                <a href="#sectionTxtImg" class="items">A propos</a>
+                <a href="#creations" class="items">Créations</a>
+                <a href="#contact" class="items">Contact</a>
+            </div>
+            <!--<img src="Ressources/menu.png" alt="logo menu" class="logoMenuImg">-->
         </div>
-        <!--<img src="Ressources/menu.png" alt="logo menu" class="logoMenuImg">-->
-    </div>
-
-    <!--Accueil-->
-
-    <div class="accueil">
-        <h1>Découvrez mes créations</h1>
-        <p class="sousTitreP">Dreams are not what you see in your sleep, <br> Dreams are things which do not let you sleep ! <br> It's all about money.</p>
-        <div class="button">
-            <a href="mailto:regisattolou21@outlook.fr">CONTACTER</a>
-        </div>
-    </div>
+        <!--Accueil-->
+            <div class="accueil">
+                <h1>Découvrez mes créations</h1>
+                <p class="sousTitreP">Dreams are not what you see in your sleep, <br> Dreams are things which do not let you sleep ! <br> It's all about money.</p>
+                <div class="button">
+                    <a href="mailto:regisattolou21@outlook.fr">CONTACTER</a>
+                </div>
+            </div>
+    </section>
 
     <!--Section texte et image-->
     <h2 class="titreSection1">A propos du site web.</h2>
@@ -197,7 +197,7 @@ elseif(isset($errorMsg)){
 <!--Footer-->
 
 <footer>
-    <p class="footer"> &copy; CopyRight, Tous droits réservés. Ralisé par <a href="mailto:regisattolou21@outlook.fr">@ Regis F.M. ATTOLOU</a></p>
+    <p class="footer"> &copy; CopyRight, Tous droits réservés. Réalisé par <a href="mailto:regisattolou21@outlook.fr">@ Régis F.M. ATTOLOU</a></p>
 </footer>
 </body>
 </html>
